--- a/Prueba1.ipynb
+++ b/Prueba1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPdMpQMambss8Rt3Jo1Jc3i",
+      "authorship_tag": "ABX9TyOmdjrPWM9Ul04p7eEj8gZ2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,155 @@
       "outputs": [],
       "source": [
         "#hola mundo"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n"
+      ],
+      "metadata": {
+        "id": "aHG2S63VFEv8"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p=lambda x: (x)/3"
+      ],
+      "metadata": {
+        "id": "rkmvjm42Gepj"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p(8)"
+      ],
+      "metadata": {
+        "id": "Ji3QkiWQGo2A",
+        "outputId": "a1b1e22e-b1f7-4628-d4fb-4dfb83776415",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.6666666666666665"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "VAMOS A HACER CALCULOS"
+      ],
+      "metadata": {
+        "id": "mml_oZjyIgM4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "5/2"
+      ],
+      "metadata": {
+        "id": "hoXVcVByIimH",
+        "outputId": "b9919ab9-51ce-4c9c-e0e4-96b7e8ba45c6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "math.cos(180)"
+      ],
+      "metadata": {
+        "id": "we7RuKuXI1A-",
+        "outputId": "0dc74aa5-84d6-456d-eeef-abbd8b143f99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-0.5984600690578581"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def suma(a,b,c):\n",
+        "  return a+b+c\n",
+        "  "
+      ],
+      "metadata": {
+        "id": "hBCyxmlGJP4F"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "suma(4,5,2)"
+      ],
+      "metadata": {
+        "id": "9vrdgHivJnyJ",
+        "outputId": "f6b4251a-158a-499f-f152-dd5563cd251c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
       ]
     }
   ]
