--- a/Prueba1.ipynb
+++ b/Prueba1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOmdjrPWM9Ul04p7eEj8gZ2",
+      "authorship_tag": "ABX9TyN3sFv/dJS9nXhs8aucslwv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,11 +65,11 @@
         "p(8)"
       ],
       "metadata": {
-        "id": "Ji3QkiWQGo2A",
-        "outputId": "a1b1e22e-b1f7-4628-d4fb-4dfb83776415",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ji3QkiWQGo2A",
+        "outputId": "a1b1e22e-b1f7-4628-d4fb-4dfb83776415"
       },
       "execution_count": 12,
       "outputs": [
@@ -100,11 +100,11 @@
         "5/2"
       ],
       "metadata": {
-        "id": "hoXVcVByIimH",
-        "outputId": "b9919ab9-51ce-4c9c-e0e4-96b7e8ba45c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hoXVcVByIimH",
+        "outputId": "b9919ab9-51ce-4c9c-e0e4-96b7e8ba45c6"
       },
       "execution_count": 16,
       "outputs": [
@@ -127,11 +127,11 @@
         "math.cos(180)"
       ],
       "metadata": {
-        "id": "we7RuKuXI1A-",
-        "outputId": "0dc74aa5-84d6-456d-eeef-abbd8b143f99",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "we7RuKuXI1A-",
+        "outputId": "0dc74aa5-84d6-456d-eeef-abbd8b143f99"
       },
       "execution_count": 17,
       "outputs": [
@@ -166,11 +166,11 @@
         "suma(4,5,2)"
       ],
       "metadata": {
-        "id": "9vrdgHivJnyJ",
-        "outputId": "f6b4251a-158a-499f-f152-dd5563cd251c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9vrdgHivJnyJ",
+        "outputId": "f6b4251a-158a-499f-f152-dd5563cd251c"
       },
       "execution_count": 20,
       "outputs": [
@@ -185,6 +185,15 @@
           "execution_count": 20
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#EJERCICIO DE SIMULACION DT, DX, "
+      ],
+      "metadata": {
+        "id": "n3Y9qrRi_z2v"
+      }
     }
   ]
 }
