--- a/EJERCICIOS2DIA.ipynb
+++ b/EJERCICIOS2DIA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9OAic/3SfJ/Sa/PoMU5gA",
+      "authorship_tag": "ABX9TyPUyPE0O1+NyCd/pNw2Xd+N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,22 +25,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/elfabry88/SIM_YAC_SUAREZ_UPSE2023/blob/main/EJERCICIOS2DIA.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "v7-Ibec1Ctu2"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "FqE0o8gdFsTk"
-      }
     },
     {
       "cell_type": "markdown",
@@ -81,7 +65,7 @@
       "metadata": {
         "id": "hLKcQSL3GJUy"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -93,7 +77,7 @@
       "metadata": {
         "id": "iX7-ATufGJ5T"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -114,7 +98,7 @@
       "metadata": {
         "id": "-uAwFuqQGQlt"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -127,9 +111,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yOLq9CBQGVnp",
-        "outputId": "cbe1030b-693c-4ab7-ed4d-61b3653835a3"
+        "outputId": "6a03d7f9-49a9-448b-fd38-8d79b609af4a"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,6 +132,211 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#EVALUACION CON EJERCICIO 2 DE DIFUSIVIDAD"
+      ],
+      "metadata": {
+        "id": "IdDtFvaiKWn_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "N91EqI6RKb3B"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "P=[0, 4000, 4000, 4000, 0]\n",
+        "Nodos=len(P)\n",
+        "Nodos2=[0,1,2,3,4]\n",
+        "Tiempo=10000\n",
+        "DT=100\n",
+        "dx=200\n",
+        "#iniciamos\n",
+        "t=DT\n",
+        "Pin=P\n",
+        "Pin2=Pin #resultados\n",
+        "Pdt=[0,0,0,0,0]"
+      ],
+      "metadata": {
+        "id": "vnuh4esKKjSj"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def Presdt(P1,P2,P3,deltat,deltax):  \n",
+        "  return(((P1-2*P2+P3)/(deltax*deltax))*deltat)+P2"
+      ],
+      "metadata": {
+        "id": "0ky8NR4VKpqt"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "while t<Tiempo:\n",
+        "    for i in (Nodos2):\n",
+        "       if i==0:\n",
+        "        Pdt[i]=P[0]\n",
+        "       elif i==len(Nodos2)-1:\n",
+        "        Pdt[i]=P[len(Nodos2)-1]\n",
+        "       else:\n",
+        "        Pdt[i]=Presdt(Pin[i-1],Pin[i],Pin[i+1],DT,dx)\n",
+        "    t=t+DT\n",
+        "    Pdt=Pin\n",
+        "    Pin2=np.append(Pin2,Pdt)"
+      ],
+      "metadata": {
+        "id": "O3ppXbJmKtZ8"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (Pin2)"
+      ],
+      "metadata": {
+        "id": "MwMFK2D8LA2a",
+        "outputId": "c38bb434-f1b8-4e33-825b-23310a82171c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[   0.         4000.         4000.         4000.            0.\n",
+            "    0.         4000.         4000.         4000.            0.\n",
+            "    0.         3990.         3999.975      3989.9999375     0.\n",
+            "    0.         3980.0499375  3999.90024969 3980.04968844    0.\n",
+            "    0.         3970.14943844 3999.77624626 3970.14888061    0.\n",
+            "    0.         3960.29813186 3999.60348256 3960.29714491    0.\n",
+            "    0.         3950.49564991 3999.38244713 3950.49411531    0.\n",
+            "    0.         3940.74162778 3999.11362425 3940.73942879    0.\n",
+            "    0.         3931.0357037  3998.79749396 3931.03272538    0.\n",
+            "    0.         3921.37751891 3998.4345321  3921.37364809    0.\n",
+            "    0.         3911.76671765 3998.02521036 3911.76184287    0.\n",
+            "    0.         3902.20294709 3997.56999628 3902.19695865    0.\n",
+            "    0.         3892.68585734 3997.06935334 3892.67864724    0.\n",
+            "    0.         3883.21510144 3996.52374094 3883.20656335    0.\n",
+            "    0.         3873.79033528 3995.93361449 3873.78036457    0.\n",
+            "    0.         3864.41121764 3995.29942537 3864.39971131    0.\n",
+            "    0.         3855.07741012 3994.62162105 3855.06426681    0.\n",
+            "    0.         3845.78857712 3993.90064505 3845.77369709    0.\n",
+            "    0.         3836.54438585 3993.13693703 3836.52767095    0.\n",
+            "    0.         3827.34450626 3992.33093279 3827.32585992    0.\n",
+            "    0.         3818.18861106 3991.4830643  3818.16793828    0.\n",
+            "    0.         3809.07637567 3990.59375977 3809.05358299    0.\n",
+            "    0.         3800.00747819 3989.66344362 3799.98247369    0.\n",
+            "    0.         3790.98159941 3988.69253659 3790.95429266    0.\n",
+            "    0.         3781.99842275 3987.68145569 3781.96872483    0.\n",
+            "    0.         3773.05763428 3986.63061431 3773.02545775    0.\n",
+            "    0.         3764.15892264 3985.54042219 3764.12418151    0.\n",
+            "    0.         3755.30197908 3984.41128548 3755.26458882    0.\n",
+            "    0.         3746.4864974  3983.24360677 3746.44637489    0.\n",
+            "    0.         3737.71217393 3982.03778511 3737.66923748    0.\n",
+            "    0.         3728.97870752 3980.79421604 3728.93287683    0.\n",
+            "    0.         3720.28579953 3979.51329165 3720.23699568    0.\n",
+            "    0.         3711.63315376 3978.19540057 3711.5812992     0.\n",
+            "    0.         3703.02047649 3976.84092801 3702.96549502    0.\n",
+            "    0.         3694.44747643 3975.45025579 3694.38929319    0.\n",
+            "    0.         3685.91386469 3974.02376241 3685.85240613    0.\n",
+            "    0.         3677.41935477 3972.561823   3677.35454866    0.\n",
+            "    0.         3668.96366255 3971.06480941 3668.89543794    0.\n",
+            "    0.         3660.54650626 3969.53309023 3660.47479347    0.\n",
+            "    0.         3652.16760646 3967.96703078 3652.09233708    0.\n",
+            "    0.         3643.826686   3966.36699318 3643.74779288    0.\n",
+            "    0.         3635.52347006 3964.73333637 3635.44088726    0.\n",
+            "    0.         3627.25768605 3963.06641612 3627.17134886    0.\n",
+            "    0.         3619.02906366 3961.36658507 3618.93890858    0.\n",
+            "    0.         3610.8373348  3959.63419276 3610.74329952    0.\n",
+            "    0.         3602.68223361 3957.86958563 3602.58425698    0.\n",
+            "    0.         3594.5634964  3956.07310708 3594.46151847    0.\n",
+            "    0.         3586.48086169 3954.2450975  3586.37482362    0.\n",
+            "    0.         3578.43407013 3952.38589424 3578.32391424    0.\n",
+            "    0.         3570.42286451 3950.49583172 3570.30853424    0.\n",
+            "    0.         3562.44698977 3948.57524137 3562.32842968    0.\n",
+            "    0.         3554.50619292 3946.62445172 3554.38334866    0.\n",
+            "    0.         3546.60022309 3944.64378839 3546.47304138    0.\n",
+            "    0.         3538.72883144 3942.63357413 3538.59726011    0.\n",
+            "    0.         3530.89177122 3940.59412884 3530.75575913    0.\n",
+            "    0.         3523.08879769 3938.52576959 3522.94829476    0.\n",
+            "    0.         3515.31966812 3936.42881065 3515.17462532    0.\n",
+            "    0.         3507.58414181 3934.30356351 3507.4345111     0.\n",
+            "    0.         3499.88198001 3932.15033692 3499.72771438    0.\n",
+            "    0.         3492.21294595 3929.96943689 3492.0539994     0.\n",
+            "    0.         3484.57680481 3927.76116671 3484.41313232    0.\n",
+            "    0.         3476.9733237  3925.52582702 3476.80488123    0.\n",
+            "    0.         3469.40227165 3923.26371577 3469.22901611    0.\n",
+            "    0.         3461.86341958 3920.97512828 3461.68530885    0.\n",
+            "    0.         3454.35654031 3918.66035726 3454.1735332     0.\n",
+            "    0.         3446.8814085  3916.31969283 3446.69346477    0.\n",
+            "    0.         3439.43780069 3913.95342253 3439.244881      0.\n",
+            "    0.         3432.02549524 3911.56183135 3431.82756117    0.\n",
+            "    0.         3424.64427234 3909.14520178 3424.44128637    0.\n",
+            "    0.         3417.29391399 3906.70381377 3417.08583948    0.\n",
+            "    0.         3409.97420395 3904.23794481 3409.76100514    0.\n",
+            "    0.         3402.68492779 3901.74786992 3402.46656979    0.\n",
+            "    0.         3395.42587283 3899.23386168 3395.20232159    0.\n",
+            "    0.         3388.19682812 3896.69619024 3387.96805046    0.\n",
+            "    0.         3380.99758445 3894.13512338 3380.76354802    0.\n",
+            "    0.         3373.82793434 3891.55092647 3373.58860759    0.\n",
+            "    0.         3366.68767198 3888.94386253 3366.44302421    0.\n",
+            "    0.         3359.57659328 3886.31419227 3359.32659457    0.\n",
+            "    0.         3352.4944958  3883.66217403 3352.23911703    0.\n",
+            "    0.         3345.44117875 3880.9880639  3345.18039161    0.\n",
+            "    0.         3338.41644302 3878.29211567 3338.15021994    0.\n",
+            "    0.         3331.42009109 3875.57458087 3331.14840529    0.\n",
+            "    0.         3324.45192709 3872.83570879 3324.17475254    0.\n",
+            "    0.         3317.51175672 3870.07574652 3317.22906814    0.\n",
+            "    0.         3310.59938731 3867.29493893 3310.31116015    0.\n",
+            "    0.         3303.71462772 3864.4935287  3303.42083817    0.\n",
+            "    0.         3296.8572884  3861.67175638 3296.55791337    0.\n",
+            "    0.         3290.02718135 3858.82986033 3289.72219845    0.\n",
+            "    0.         3283.22412009 3855.96807683 3282.91350765    0.\n",
+            "    0.         3276.44791969 3853.08664001 3276.13165672    0.\n",
+            "    0.         3269.69839669 3850.18578194 3269.37646289    0.\n",
+            "    0.         3262.97536916 3847.26573261 3262.6477449     0.\n",
+            "    0.         3256.27865664 3844.32671995 3255.94532298    0.\n",
+            "    0.         3249.60808016 3841.36896986 3249.26901879    0.\n",
+            "    0.         3242.96346219 3838.39270622 3242.61865546    0.\n",
+            "    0.         3236.34462664 3835.39815089 3235.99405756    0.\n",
+            "    0.         3229.75139888 3832.38552378 3229.39505108    0.\n",
+            "    0.         3223.1836057  3829.3550428  3222.82146343    0.\n",
+            "    0.         3216.64107528 3826.30692393 3216.27312343    0.\n",
+            "    0.         3210.12363721 3823.24138121 3209.74986126    0.        ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "tEJe0hmELFcx"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
