--- a/PRUEBA2_EJERCICIO1EXCELYPYTHON.ipynb
+++ b/PRUEBA2_EJERCICIO1EXCELYPYTHON.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyONNfz3Pi8/mGx3QT5y8jdM",
+      "authorship_tag": "ABX9TyMP27PGcWp1FpkgqkcCkqWx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 232,
+      "execution_count": 96,
       "metadata": {
         "id": "wBLsoKdC9ZIh"
       },
@@ -45,12 +45,12 @@
         "#Pini = [0, 4000, 4000, 4000, 4000, 0]\n",
         "#Nodos=\n",
         "longitudT=1000\n",
-        "dx=142.85"
+        "dx=200\n"
       ],
       "metadata": {
         "id": "s9ut-X36-Sc6"
       },
-      "execution_count": 233,
+      "execution_count": 97,
       "outputs": []
     },
     {
@@ -62,7 +62,7 @@
       "metadata": {
         "id": "p5d3DpnqEGR1"
       },
-      "execution_count": 234,
+      "execution_count": 98,
       "outputs": []
     },
     {
@@ -71,13 +71,13 @@
         "Pyac=4000\n",
         "PFrontd=0 #Frontera derecha\n",
         "PFronti=0 #Frontera izquierda\n",
-        "dt = 2000\n",
+        "dt = 2500\n",
         "tf = 20000"
       ],
       "metadata": {
         "id": "Oi51HgzH-gOk"
       },
-      "execution_count": 235,
+      "execution_count": 99,
       "outputs": []
     },
     {
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "-p93rQWkBgcn"
       },
-      "execution_count": 236,
+      "execution_count": 90,
       "outputs": []
     },
     {
@@ -107,7 +107,7 @@
       "metadata": {
         "id": "cNoWVvy2REeK"
       },
-      "execution_count": 237,
+      "execution_count": 91,
       "outputs": []
     },
     {
@@ -119,7 +119,7 @@
       "metadata": {
         "id": "L0XX6QtnR7XI"
       },
-      "execution_count": 238,
+      "execution_count": 92,
       "outputs": []
     },
     {
@@ -132,19 +132,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uCFC50yjSBE1",
-        "outputId": "10e16e0e-1fee-4ba4-f8c8-a46b42b7aaad"
+        "outputId": "f12356c3-69d2-49d8-fb35-61d604d2df30"
       },
-      "execution_count": 239,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([0., 0., 0., 0., 0., 0., 0., 0.])"
+              "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
             ]
           },
           "metadata": {},
-          "execution_count": 239
+          "execution_count": 93
         }
       ]
     },
@@ -168,7 +168,7 @@
       "metadata": {
         "id": "K-GEmu9QS38P"
       },
-      "execution_count": 240,
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -181,38 +181,38 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yXfI3VxWTbp3",
-        "outputId": "8e841af7-0dc9-418b-db2c-9fbbcb7d37f4"
+        "outputId": "a8c152d0-8f53-4827-da64-d78746115ac0"
       },
-      "execution_count": 241,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[   0.        , 4000.        , 4000.        , 4000.        ,\n",
-              "        4000.        , 4000.        , 4000.        ,    0.        ],\n",
-              "       [   0.        , 3607.96079706, 3961.57631584, 3996.23410237,\n",
-              "        3999.63090512, 3999.96382508, 3607.95725156,    0.        ],\n",
-              "       [   0.        , 3289.00306481, 3899.05434828, 3987.042454  ,\n",
-              "        3998.42974296, 3961.39298384, 3288.98224597,    0.        ],\n",
-              "       [   0.        , 3026.43953454, 3822.15324097, 3971.99776101,\n",
-              "        3992.20918429, 3898.51043108, 3026.36948739,    0.        ],\n",
-              "       [   0.        , 2807.80654064, 3737.42355455, 3950.98810734,\n",
-              "        3978.98571862, 3820.91943787, 2807.6292993 ,    0.        ],\n",
-              "       [   0.        , 2623.72555938, 3649.20165523, 3924.15411761,\n",
-              "        3958.11963965, 3735.05403774, 2623.35082495,    0.        ],\n",
-              "       [   0.        , 2467.08144793, 3560.29032531, 3891.82085388,\n",
-              "        3929.75909368, 3645.17923111, 2466.38593181,    0.        ],\n",
-              "       [   0.        , 2332.42847106, 3472.44107069, 3854.43584422,\n",
-              "        3894.48506138, 3554.08034949, 2331.26065123,    0.        ],\n",
-              "       [   0.        , 2215.56002911, 3386.69364189, 3812.51773997,\n",
-              "        3853.08846256, 3463.53776011, 2213.74851316,    0.        ],\n",
-              "       [   0.        , 2113.19600416, 3303.61332718, 3766.61644832,\n",
-              "        3806.43357095, 3374.65331515, 2110.55951083,    0.        ]])"
+              "array([[   0., 4000., 4000., 4000., 4000., 4000., 4000., 4000., 4000.,\n",
+              "        4000.,    0.],\n",
+              "       [   0., 3200., 3840., 3968., 3993., 3998., 3999., 3999., 3999.,\n",
+              "        3199.,    0.],\n",
+              "       [   0., 2688., 3635., 3906., 3976., 3993., 3997., 3998., 3838.,\n",
+              "        2687.,    0.],\n",
+              "       [   0., 2339., 3430., 3824., 3949., 3985., 3994., 3965., 3633.,\n",
+              "        2338.,    0.],\n",
+              "       [   0., 2089., 3240., 3732., 3912., 3972., 3983., 3902., 3427.,\n",
+              "        2088.,    0.],\n",
+              "       [   0., 1901., 3070., 3635., 3868., 3953., 3960., 3818., 3237.,\n",
+              "        1900.,    0.],\n",
+              "       [   0., 1754., 2919., 3538., 3819., 3927., 3925., 3723., 3066.,\n",
+              "        1753.,    0.],\n",
+              "       [   0., 1636., 2786., 3443., 3765., 3894., 3878., 3622., 2914.,\n",
+              "        1634.,    0.],\n",
+              "       [   0., 1538., 2667., 3352., 3708., 3853., 3821., 3520., 2779.,\n",
+              "        1536.,    0.],\n",
+              "       [   0., 1456., 2561., 3265., 3648., 3805., 3757., 3419., 2658.,\n",
+              "        1453.,    0.]])"
             ]
           },
           "metadata": {},
-          "execution_count": 241
+          "execution_count": 95
         }
       ]
     },
